--- a/architecture/index.html
+++ b/architecture/index.html
@@ -130,7 +130,7 @@
   <div class="wrapper">
     <div class="element">
 
-      <div class="marginResponsiveGrid">
+      <div class="forFullResponsiveGrid">
         <div class="intro">
           <div class="t-hello">hi there! </div>
         </div>
@@ -167,7 +167,7 @@
         </div>
       </div>
 
-      <div class="Grid Grid--full marginResponsiveGrid">
+      <div class="Grid Grid--full forFullResponsiveGrid">
         <div class="Grid-cell Grey700">
           <h3>Throughout my three-year M.Arch program, I delved into design theories, methods, and practices, which are
             exemplified in the following projects. These projects placed great emphasis on the significant determinants
@@ -184,7 +184,7 @@
 
   <!-- Arrow -->
   <div class="wrapper">
-    <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+    <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
       <div class="Grid-cell">
         <div class="element">
           <h2 class="tArrow">Selected Projects <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
@@ -412,7 +412,7 @@
 
   <!-- Arrow -->
   <div class="wrapper">
-    <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+    <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
       <div class="Grid-cell">
         <div class="element">
           <h2 class="tArrow">Skills & Experiences <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
@@ -423,7 +423,7 @@
   <!-- Arrow -->
   <div class="blankHM"></div>
 
-  <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+  <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
 
     <ul class="tags" id="TagsCloud">
 
@@ -476,7 +476,7 @@
   </div>
   <div class="blankHL"></div>
   <!-- message -->
-  <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+  <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
     <div class="Grid-cell">
       <div data-aos="fade-up">
         <h4 class="element">
@@ -610,7 +610,7 @@
         </div>
       </div>
       <div class="blankHS"></div>
-      <div class="Grid Grid--full marginResponsiveGrid wrapper">
+      <div class="Grid Grid--full forFullResponsiveGrid">
         <div class="Grid-cell">
           <div class="footerBorder">
             <div class="element">
