--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- Basic Metadata -->
   <link rel="canonical" href="https://vickywang.me/">
-  <title>Skilled UX Designer for B2B Solutions & Consumer Apps - Vicky Wang </title>
+  <title>Innovative UX Strategist Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang </title>
   <meta name="title" content="Skilled UX Designer for B2B Solutions & Consumer Apps - Vicky Wang">
   <meta name="author" content="Vicky W.">
   <meta name="description"
@@ -16,7 +16,7 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Skilled UX Designer for B2B Solutions & Consumer Apps - Vicky Wang">
+  <meta property="og:title" content="Innovative UX Strategist Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
   <meta property="og:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="og:url" content="https://vickywang.me/">
@@ -26,7 +26,7 @@
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://vickywang.me/">
-  <meta property="twitter:title" content="Skilled UX Designer for B2B Solutions & Consumer Apps - Vicky Wang">
+  <meta property="twitter:title" content="Innovative UX Strategist Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
   <meta property="twitter:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
@@ -136,7 +136,7 @@
     <!--intro-->
     <div class="wrapper">
       <div class="element">
-        <div class="marginResponsiveGrid">
+        <div class="forFullResponsiveGrid">
 
           <p class="t-hello">hello, I'm Vicky. </p>
 
@@ -170,11 +170,9 @@
             </div>
           </div>
         </div>
-        <div class="Grid Grid--full marginResponsiveGrid">
+        <div class="Grid Grid--full forFullResponsiveGrid">
           <div class="Grid-cell">
-            <h3>I work with a small team based in San Francisco to design business and consumer-facing websites. My
-              strength lies in understanding complex problems and requirements and transforming them into simple and
-              effective solutions. </h3>
+            <h3>I am based in San Francisco and am deeply committed to developing web solutions for both businesses and consumers. My approach hinges on dissecting complex challenges and transforming them into clear, efficient, and impactful digital experiences. </h3>
           </div>
         </div>
       </div>
@@ -258,7 +256,7 @@
     <div class="blankHS"></div>
     <!-- Arrow -->
     <div class="wrapper">
-      <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+      <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
         <div class="Grid-cell">
           <div class="element">
             <h2 class="tArrow">Case Study <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></h2>
@@ -368,17 +366,18 @@
     </div>
     <div class="blankHS"></div>
 
-        <!-- Arrow -->
-        <div class="wrapper">
-          <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
-            <div class="Grid-cell">
-              <div class="element">
-                <h2 class="tArrow">Design System &#38; Navigation  <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></h2>
-              </div>
-            </div>
+    <!-- Arrow -->
+    <div class="wrapper">
+      <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+        <div class="Grid-cell">
+          <div class="element">
+            <h2 class="tArrow">Design System &#38; Navigation <img class="seArrow" src="./icon/arrow-se.svg"
+                alt="icon arrow"></h2>
           </div>
         </div>
-        <!-- Arrow -->
+      </div>
+    </div>
+    <!-- Arrow -->
     <div class="blankHXS"></div>
     <div class="wrapper">
 
@@ -426,21 +425,22 @@
       </div>
     </div>
     <div class="blankHS"></div>
-    
-        <!-- Arrow -->
-        <div class="wrapper">
-          <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
-            <div class="Grid-cell">
-              <div class="element">
-                <h2 class="tArrow">Skills & Experiences <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow"></h2>
-              </div>
-            </div>
+
+    <!-- Arrow -->
+    <div class="wrapper">
+      <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+        <div class="Grid-cell">
+          <div class="element">
+            <h2 class="tArrow">Skills & Experiences <img class="seArrow" src="./icon/arrow-se.svg" alt="icon arrow">
+            </h2>
           </div>
         </div>
-        <!-- Arrow -->
+      </div>
+    </div>
+    <!-- Arrow -->
     <div class="blankHM"></div>
 
-    <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+    <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
       <ul class="tags" id="TagsCloud">
 
         <li class="tag"><span class="box"> User-centered Design</span></li>
@@ -496,7 +496,7 @@
 
     <!-- message -->
     <div class="blankHL"></div>
-    <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+    <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
       <div class="Grid-cell">
         <div data-aos="fade-up">
           <h4 class="element">
@@ -630,7 +630,7 @@
         </div>
       </div>
       <div class="blankHS"></div>
-      <div class="Grid Grid--full marginResponsiveGrid wrapper">
+      <div class="Grid Grid--full forFullResponsiveGrid">
         <div class="Grid-cell">
           <div class="footerBorder">
             <div class="element">
