--- a/navigation/index.html
+++ b/navigation/index.html
@@ -455,7 +455,7 @@
 
 
     <div class="blankHS"></div>
-    <div class="Grid Grid--full marginResponsiveGrid wrapper">
+    <div class="Grid Grid--full forFullResponsiveGrid">
       <div class="Grid-cell">
         <div class=" footerBorder">
           <div class="element">
