--- a/photography/index.html
+++ b/photography/index.html
@@ -134,7 +134,7 @@
   <!--intro-->
   <div class="wrapper">
     <div class="element">
-      <div class="marginResponsiveGrid">
+      <div class="forFullResponsiveGrid">
 
         <div class="intro">
           <div class="t-hello">hi there! </div>
@@ -170,7 +170,7 @@
           </div>
         </div>
       </div>
-      <div class="Grid Grid--full marginResponsiveGrid">
+      <div class="Grid Grid--full forFullResponsiveGrid">
         <div class="Grid-cell Grey700">
           <h3>Through my unique perspective and lens, I find joy in capturing the intricate narratives and inherent
             beauty of natural elements in my photography. Whether it's a sweeping landscape or a tiny detail, I strive
@@ -188,10 +188,10 @@
   <main>
     <div class="blankHS"></div>
 
-    <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+    <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
       <div class="Grid-cell">
-        <h1 class="Grid Grid--center"> <span class="specialTextL">Photographs</span><img class="moveUpDown widthLogo"
-            src="../icon/arrow-down.svg" alt="Scroll down">
+        <h1 class="Grid Grid--center"> <span class="specialTextL Grey600">Photographs</span><img
+            class="moveUpDown widthLogo" src="../icon/arrow-accordion-down_grey600.svg" alt="Scroll down">
         </h1>
       </div>
     </div>
@@ -233,7 +233,7 @@
       <section id="content11">
         <!-- Arrow -->
         <div class="wrapper">
-          <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+          <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
             <div class="Grid-cell">
               <div class="element">
                 <h2 class="tArrow">Pacific Grove Rocky View <img class="seArrow" src="../icon/arrow-se.svg"
@@ -247,7 +247,7 @@
 
         <div class="blankHS"></div>
         <div class="wrapper">
-          <div class="Grid Grid--full marginResponsiveGrid">
+          <div class="Grid Grid--full forFullResponsiveGrid">
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
@@ -318,7 +318,7 @@
 
         <!-- Arrow -->
         <div class="wrapper">
-          <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+          <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
             <div class="Grid-cell">
               <div class="element">
                 <h2 class="tArrow">Monarch Butterfly Sanctuary <img class="seArrow" src="../icon/arrow-se.svg"
@@ -372,7 +372,7 @@
       <section id="content21">
         <!-- Arrow -->
         <div class="wrapper">
-          <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+          <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
             <div class="Grid-cell">
               <div class="element">
                 <h2 class="tArrow">Yellowstone National Park<img class="seArrow" src="../icon/arrow-se.svg"
@@ -386,7 +386,7 @@
         <div class="blankHS"></div>
 
         <div class="wrapper">
-          <div class="Grid Grid--full marginResponsiveGrid">
+          <div class="Grid Grid--full forFullResponsiveGrid">
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
@@ -452,7 +452,7 @@
       <section id="content22">
         <!-- Arrow -->
         <div class="wrapper">
-          <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+          <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
             <div class="Grid-cell">
               <div class="element">
                 <h2 class="tArrow">Teton National Park<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
@@ -465,7 +465,7 @@
 
         <div class="blankHS"></div>
         <div class="wrapper">
-          <div class="Grid Grid--full marginResponsiveGrid">
+          <div class="Grid Grid--full forFullResponsiveGrid">
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
@@ -491,7 +491,7 @@
       <section id="content23">
         <!-- Arrow -->
         <div class="wrapper">
-          <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+          <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
             <div class="Grid-cell">
               <div class="element">
                 <h2 class="tArrow">Donner Lake<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
@@ -504,7 +504,7 @@
 
         <div class="blankHS"></div>
         <div class="wrapper">
-          <div class="Grid Grid--full marginResponsiveGrid">
+          <div class="Grid Grid--full forFullResponsiveGrid">
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
@@ -532,7 +532,7 @@
       <section id="content31">
         <!-- Arrow -->
         <div class="wrapper">
-          <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+          <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
             <div class="Grid-cell">
               <div class="element">
                 <h2 class="tArrow">Bosque Del Apache National Wildlife Refuge<img class="seArrow"
@@ -581,7 +581,7 @@
         <div class="blankHS"></div>
 
         <div class="wrapper">
-          <div class="Grid Grid--full marginResponsiveGrid">
+          <div class="Grid Grid--full forFullResponsiveGrid">
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
@@ -606,7 +606,7 @@
       <section id="content32">
         <!-- Arrow -->
         <div class="wrapper">
-          <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+          <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
             <div class="Grid-cell">
               <div class="element">
                 <h2 class="tArrow">Sacramento National Wildlife Refuge<img class="seArrow" src="../icon/arrow-se.svg"
@@ -680,7 +680,7 @@
       <section id="content33">
         <!-- Arrow -->
         <div class="wrapper">
-          <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+          <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
             <div class="Grid-cell">
               <div class="element">
                 <h2 class="tArrow">White Sands National Monument<img class="seArrow" src="../icon/arrow-se.svg"
@@ -821,7 +821,7 @@
       <section id="content34">
         <!-- Arrow -->
         <div class="wrapper">
-          <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+          <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
             <div class="Grid-cell">
               <div class="element">
                 <h2 class="tArrow">Taos Pueblo Indian Reservation<img class="seArrow" src="../icon/arrow-se.svg"
@@ -836,7 +836,7 @@
         <div class="blankHS"></div>
 
         <div class="wrapper">
-          <div class="Grid Grid--full marginResponsiveGrid">
+          <div class="Grid Grid--full forFullResponsiveGrid">
 
             <div class="Grid-cell">
               <div class="element">
@@ -873,7 +873,7 @@
 
   <!-- Arrow -->
   <div class="wrapper">
-    <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+    <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
       <div class="Grid-cell">
         <div class="element">
           <h2 class="tArrow">Skills & Experiences<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
@@ -886,7 +886,7 @@
 
   <div class="blankHM"></div>
 
-  <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+  <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
     <ul class="tags" id="TagsCloud">
 
       <li class="tag"><span class="box"> User-centered Design</span></li>
@@ -940,7 +940,7 @@
 
   <!-- message -->
   <div class="blankHL"></div>
-  <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+  <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
     <div class="Grid-cell">
       <div data-aos="fade-up">
         <h4 class="element">
@@ -972,10 +972,8 @@
 
         <div class="Grid Grid--gutters Grid--1of3">
           <div class="Grid-cell">
-
             <a href="/" class=""><img class="widthXXS" src="../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
             <div class="blankHXS"></div>
-
             <div class="Grid Grid--gutters">
               <div class="ClipboardBoxIconOnly">
                 <button class="ClipboardIconOnly">
@@ -1072,7 +1070,8 @@
         </div>
       </div>
       <div class="blankHS"></div>
-      <div class="Grid Grid--full marginResponsiveGrid wrapper">
+
+      <div class="Grid Grid--full forFullResponsiveGrid">
         <div class="Grid-cell">
           <div class="footerBorder">
             <div class="element">
