--- a/about/index.html
+++ b/about/index.html
@@ -123,7 +123,7 @@
   <!--intro-->
   <div class="wrapper">
     <div class="element">
-      <div class="marginResponsiveGrid">
+      <div class="forFullResponsiveGrid">
         <div class="intro">
           <div class="t-hello">hi there! </div>
         </div>
@@ -186,7 +186,7 @@
         </div>
       </div>
 
-      <div class="Grid Grid--full marginResponsiveGrid">
+      <div class="Grid Grid--full forFullResponsiveGrid">
         <div class="Grid-cell Grey700">
 
         </div>
@@ -200,7 +200,7 @@
 
   <!-- Arrow -->
   <div class="wrapper">
-    <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+    <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
       <div class="Grid-cell">
         <div class="element">
           <h2 class="tArrow">Method &#38; Importance <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
@@ -320,7 +320,7 @@
 
   <!-- Arrow -->
   <div class="wrapper">
-    <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+    <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
       <div class="Grid-cell">
         <div class="element">
           <h2 class="tArrow">My Journey <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
@@ -330,7 +330,7 @@
   </div>
   <!-- Arrow -->
   <div class="wrapper">
-    <div class="Grid Grid--full marginResponsiveGrid">
+    <div class="Grid Grid--full forFullResponsiveGrid">
       <div class="Grid-cell">
         <div class="element">
           <div class="element">
@@ -398,7 +398,7 @@
 
   <!-- Arrow -->
   <div class="wrapper">
-    <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+    <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
       <div class="Grid-cell">
         <div class="element">
           <h2 class="tArrow">About Me<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
@@ -410,7 +410,7 @@
   <div class="blankHS"></div>
 
   <div class="wrapper">
-    <div class="Grid Grid--full marginResponsiveGrid">
+    <div class="Grid Grid--full forFullResponsiveGrid">
       <div class="Grid-cell">
         <div class="element">
 
@@ -587,7 +587,7 @@
 
   <!-- Arrow -->
   <div class="wrapper">
-    <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+    <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
       <div class="Grid-cell">
         <div class="element">
           <h2 class="tArrow">Skills & Experiences <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></h2>
@@ -598,7 +598,7 @@
   <!-- Arrow -->
   <div class="blankHM"></div>
 
-  <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+  <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
 
     <ul class="tags" id="TagsCloud">
 
@@ -651,7 +651,7 @@
   </div>
   <!-- message -->
   <div class="blankHL"></div>
-  <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+  <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
     <div class="Grid-cell">
       <div data-aos="fade-up">
         <h4 class="element">
@@ -786,7 +786,7 @@
       </div>
     </div>
     <div class="blankHS"></div>
-    <div class="Grid Grid--full marginResponsiveGrid wrapper">
+    <div class="Grid Grid--full forFullResponsiveGrid">
       <div class="Grid-cell">
         <div class="footerBorder">
           <div class="element">
