--- a/architecture/LACAMA/index.html
+++ b/architecture/LACAMA/index.html
@@ -729,7 +729,7 @@
 
 
     <div class="blankHS"></div>
-    <div class="Grid Grid--full marginResponsiveGrid wrapper">
+    <div class="Grid Grid--full forFullResponsiveGrid">
       <div class="Grid-cell">
         <div class=" footerBorder">
           <div class="element">
