--- a/architecture/the_rotation_of_curves/index.html
+++ b/architecture/the_rotation_of_curves/index.html
@@ -139,7 +139,7 @@
   <!-- cover -->
   <div class="blankHL"></div>
   <!-- Arrow -->
-  <div class="Grid Grid--full marginResponsiveGrid wrapper">
+  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
     <div class="Grid-cell">
       <div class="element">
         <h2 class="tArrow"> PART 1 THE ISLAND <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -194,7 +194,7 @@
   <div class="blankHM"></div>
 
   <!-- Arrow -->
-  <div class="Grid Grid--full marginResponsiveGrid wrapper">
+  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
     <div class="Grid-cell">
       <div class="element">
         <h2 class="tArrow"> PART 2 THE FOAME <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -274,7 +274,7 @@
   <hr>
   <div class="blankHM"></div>
   <!-- Arrow -->
-  <div class="Grid Grid--full marginResponsiveGrid wrapper">
+  <div class="Grid Grid--full forFullResponsiveGrid wrapper">
     <div class="Grid-cell">
       <div class="element">
         <h2 class="tArrow"> PART 3 THE HOUSE <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
@@ -375,7 +375,7 @@
   <div class="blankHL"></div>
 
   <!-- message -->
-  <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
+  <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
     <div class="Grid-cell">
       <div data-aos="fade-up">
         <h4 class="element">
@@ -504,7 +504,7 @@
 
 
     <div class="blankHS"></div>
-    <div class="Grid Grid--full marginResponsiveGrid wrapper">
+    <div class="Grid Grid--full forFullResponsiveGrid">
       <div class="Grid-cell">
         <div class=" footerBorder">
           <div class="element">
