--- a/architecture/index.html
+++ b/architecture/index.html
@@ -9,14 +9,14 @@
 
   <!-- Basic Metadata -->
   <link rel="canonical" href="https://vickywang.me/architecture">
-  <title>Architectural Portfolio - Vicky Wang </title>
+  <title>Architectural Innovation and Academic Exploration </title>
   <meta name="author" content="Vicky W.">
   <meta name="description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Architectural Portfolio - Vicky Wang">
+  <meta property="og:title" content="Architectural Innovation and Academic Exploration">
   <meta property="og:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="og:url" content="https://vickywang.me/architecture">
@@ -26,7 +26,7 @@
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://vickywang.me/architecture">
-  <meta property="twitter:title" content="Architectural Portfolio - Vicky Wang">
+  <meta property="twitter:title" content="Architectural Innovation and Academic Exploration">
   <meta property="twitter:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
