--- a/architecture/the_rotation_of_curves/index.html
+++ b/architecture/the_rotation_of_curves/index.html
@@ -402,6 +402,7 @@
   </button>
   <!--back to top-->
 
+
   <!--footer-->
   <footer class="GreyBg100">
 
@@ -409,7 +410,7 @@
     <div class="wrapper">
       <div class="element">
 
-        <div class="Grid Grid--gutters Grid--1of3 ">
+        <div class="Grid Grid--gutters Grid--1of3">
           <div class="Grid-cell">
 
             <a href="/" class=""><img class="widthXXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
@@ -449,18 +450,21 @@
                 <h5> <strong> Project </strong> </h5>
                 <div class="blankHXXS"></div>
                 <a href="/glorify/">
-                  <h6> <strong class="Grey700">Glorify</strong> </h6>
+                  <h6 class="fontWeight400"> Glorify</h6>
                 </a>
+
 
                 <h6>Elevating Community Involvement</h6>
                 <div class="blankHXXS"></div>
                 <a href="/appointa/">
-                  <h6> <strong class="Grey700">APPOINTA</strong> </h6>
+                  <h6 class="fontWeight400"> APPOINTA</h6>
+
                 </a>
                 <h6>Simplifying Interview Coordination</h6>
                 <div class="blankHXXS"></div>
                 <a href="/seer/">
-                  <h6> <strong class="Grey700">SEER</strong> </h6>
+                  <h6 class="fontWeight400">SEER</h6>
+
                 </a>
                 <h6>Empowering Brand Managers with Insights</h6>
               </div>
@@ -469,19 +473,25 @@
                 <h5> <strong> Service </strong> </h5>
                 <div class="blankHXXS"></div>
 
-                <h6> <strong class="Grey700"> UX/UI Design </strong> </h6>
+                <a href="/">
+                  <h6 class="fontWeight400">UX/UI Design</h6>
+                </a>
                 <h6>Creating Intuitive User Experiences</h6>
                 <div class="blankHXXS"></div>
 
-                <h6> <strong class="Grey700">Design Research </strong> </h6>
+                <a href="/">
+                  <h6 class="fontWeight400">Design Research</h6>
+                </a>
                 <h6>In-depth Analysis for Targeted Solutions</h6>
                 <div class="blankHXXS"></div>
-
-                <h6> <strong class="Grey700">Web Development </strong> </h6>
+                <a href="/">
+                  <h6 class="fontWeight400">Web Development</h6>
+                </a>
                 <h6>Seamless Design Implementation</h6>
                 <div class="blankHXXS"></div>
-
-                <h6> <strong class="Grey700">Branding </strong> </h6>
+                <a href="/">
+                  <h6 class="fontWeight400">Branding</h6>
+                </a>
                 <h6>Crafting Memorable Brand Identities</h6>
               </div>
 
@@ -492,23 +502,22 @@
                 <a href="/about">
                   <h6>About me</h6>
                 </a>
-                <h6><a href="mailto:vickyw.design@gmail.com">Email me</a></h6>
+                <a href="mailto:vickyw.design@gmail.com">
+                  <h6>Email me</h6>
+                </a>
               </div>
             </div>
-          </div>
 
+          </div>
         </div>
       </div>
-
-    </div>
-
-
-    <div class="blankHS"></div>
-    <div class="Grid Grid--full forFullResponsiveGrid">
-      <div class="Grid-cell">
-        <div class=" footerBorder">
-          <div class="element">
-            <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
+      <div class="blankHS"></div>
+      <div class="Grid Grid--full forFullResponsiveGrid">
+        <div class="Grid-cell">
+          <div class="footerBorder">
+            <div class="element">
+              <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
+            </div>
           </div>
         </div>
       </div>
