--- a/architecture/index.html
+++ b/architecture/index.html
@@ -201,7 +201,7 @@
         <a href="./recreation_commons/">
           <div class="element">
             <div class="elementCard float cardBorder shadowBoxLt">
-              <img src="./ar_01.svg" alt="Appointa">
+              <img src="./all_sizes_recreation_commons.svg" alt="Appointa">
               <div class="elementInner">
                 <h5>Activity Center</h5>
                 <h3 class="arrCard" data-aos="fade-up"><strong>RECREATION COMMONS</strong></h3>
