--- a/photography/index.html
+++ b/photography/index.html
@@ -243,7 +243,22 @@
           </div>
         </div>
         <!-- Arrow -->
-
+        <div class="wrapper">
+          <div class="Grid Grid--full forFullResponsiveGrid">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="ShadowBox">
+                  <picture>
+                    <source media="(min-width:1081px)" srcset="./large_placeholder.jpg">
+                    <source media="(min-width:651px) and (max-width:1080px)" srcset="./medium(default)_placeholder.jpg">
+                    <source media="(max-width:650px)" srcset="./small_placeholder.jpg">
+                    <img src="./medium(default)_placeholder.jpg" alt="Testing" style="width:100%;">
+                  </picture>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
         <div class="blankHS"></div>
         <div class="wrapper">
@@ -251,19 +266,26 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
-                  <img src="default_Squirrel_Stand.jpg" srcset="small_Squirrel_Stand.jpg 500w, 
-                               medium_Squirrel_Stand.jpg 1000w, 
-                               large_Squirrel_Stand.jpg 1500w" sizes="(max-width: 480px) 400px, 
-                              (max-width: 768px) 700px, 
-                              (max-width: 1024px) 1000px, 
-                              1500px" alt="Squirrel Eat Nuts">
-                  <div class="elementInner">
-                    <h5>Wildlife</h5>
-                    <h3><strong>Grove Rocky View, Monterey, CA</strong> </h3>
-                    <p class="lineHorizAll"></p>
-                    <h6>September, 2023</h6>
-                    <h6>Canon 5d mark iii | EF 70-200mm f/2.8L IS </h6>
-                  </div>
+
+                  <picture>
+
+
+                    <img src="medium_Squirrel_Stand.jpg" srcset="small_Squirrel_Stand.jpg 500w, 
+                          medium_Squirrel_Stand.jpg 1000w, 
+                          large_Squirrel_Stand.jpg 1500w" sizes="(max-width: 480px) 400px, 
+                         (max-width: 768px) 700px, 
+                         (min-width: 1024px) 1000px, 
+                         1500px" alt="Squirrel Eating Nuts">
+
+
+                    <div class="elementInner">
+                      <h5>Wildlife</h5>
+                      <h3><strong>Grove Rocky View, Monterey, CA</strong> </h3>
+                      <p class="lineHorizAll"></p>
+                      <h6>September, 2023</h6>
+                      <h6>Canon 5d mark iii | EF 70-200mm f/2.8L IS </h6>
+                    </div>
+                  </picture>
                 </div>
               </div>
             </div>
