--- a/design_system/index.html
+++ b/design_system/index.html
@@ -3430,9 +3430,9 @@
                 <div class="ShadowBox">
                   <picture>
                     <source media="(min-width:1081px)" srcset="./large_placeholder.jpg">
-                    <source media="(min-width:651px) and (max-width:1080px)" srcset="./medium(default)_placeholder.jpg">
+                    <source media="(min-width:651px) and (max-width:1080px)" srcset="./medium_default_placeholder.jpg">
                     <source media="(max-width:650px)" srcset="./small_placeholder.jpg">
-                    <img src="./medium(default)_placeholder.jpg" alt="Testing" style="width:100%;">
+                    <img src="./medium_default_placeholder.jpg" alt="Testing" style="width:100%;">
                   </picture>
                 </div>
               </div>
@@ -3488,7 +3488,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="shadowBox">
-                  <img src="./PlaceholderDark_zeroBottomBorderRadius.svg" alt="Placeholder">
+                  <img src="./PlaceholderDark_zeroBorderRadius.svg" alt="Placeholder">
                   <div class="element">
                     <div class="element">
                       <h5>Lorem</h5>
@@ -3504,7 +3504,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="shadowBox">
-                  <img src="./PlaceholderDark_zeroBottomBorderRadius.svg" alt="Placeholder">
+                  <img src="./PlaceholderDark_zeroBorderRadius.svg" alt="Placeholder">
                   <div class="element">
                     <div class="element">
                       <h5>Lorem</h5>
@@ -3572,10 +3572,14 @@
 
         <!-- Arrow -->
         <div class="wrapper">
-          <div class="element">
-            <h2 class="tArrow">Card &#43; Image &#43; Link <img class="seArrow" src="../icon/arrow-se.svg"
-                alt="icon arrow">
-            </h2>
+          <div class="Grid Grid--full forFullResponsiveGrid u-textCenter">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow">Card &#43; Image &#43; Link <img class="seArrow" src="../icon/arrow-se.svg"
+                    alt="icon arrow">
+                </h2>
+              </div>
+            </div>
           </div>
         </div>
         <!-- Arrow -->
