--- a/photography/index.html
+++ b/photography/index.html
@@ -243,22 +243,7 @@
           </div>
         </div>
         <!-- Arrow -->
-        <div class="wrapper">
-          <div class="Grid Grid--full forFullResponsiveGrid">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="ShadowBox">
-                  <picture>
-                    <source media="(min-width:1081px)" srcset="./large_placeholder.jpg">
-                    <source media="(min-width:651px) and (max-width:1080px)" srcset="./medium(default)_placeholder.jpg">
-                    <source media="(max-width:650px)" srcset="./small_placeholder.jpg">
-                    <img src="./medium(default)_placeholder.jpg" alt="Testing" style="width:100%;">
-                  </picture>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+
 
         <div class="blankHS"></div>
         <div class="wrapper">
@@ -268,24 +253,19 @@
                 <div class="ShadowBox">
 
                   <picture>
-
-
-                    <img src="medium_Squirrel_Stand.jpg" srcset="small_Squirrel_Stand.jpg 500w, 
-                          medium_Squirrel_Stand.jpg 1000w, 
-                          large_Squirrel_Stand.jpg 1500w" sizes="(max-width: 480px) 400px, 
-                         (max-width: 768px) 700px, 
-                         (min-width: 1024px) 1000px, 
-                         1500px" alt="Squirrel Eating Nuts">
-
-
-                    <div class="elementInner">
-                      <h5>Wildlife</h5>
-                      <h3><strong>Grove Rocky View, Monterey, CA</strong> </h3>
-                      <p class="lineHorizAll"></p>
-                      <h6>September, 2023</h6>
-                      <h6>Canon 5d mark iii | EF 70-200mm f/2.8L IS </h6>
-                    </div>
+                    <source media="(min-width:1081px)" srcset="./large_Squirrel_Stand.jpg">
+                    <source media="(min-width:651px) and (max-width:1080px)"
+                      srcset="./medium_default_Squirrel_Stand.jpg">
+                    <source media="(max-width:650px)" srcset="./small_Squirrel_Stand.jpg">
+                    <img src="./medium_default_Squirrel_Stand.jpg" alt="Testing" style="width:100%;">
                   </picture>
+                  <div class="elementInner">
+                    <h5>Wildlife</h5>
+                    <h3><strong>Grove Rocky View, Monterey, CA</strong> </h3>
+                    <p class="lineHorizAll"></p>
+                    <h6>September, 2023</h6>
+                    <h6>Canon 5d mark iii | EF 70-200mm f/2.8L IS </h6>
+                  </div>
                 </div>
               </div>
             </div>
@@ -298,12 +278,12 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
-                  <img src="default_Squirrel_Eat.jpg" srcset="small_Squirrel_Eat.jpg 500w, 
-                               medium_Squirrel_Eat.jpg 1000w, 
-                               large_Squirrel_Eat.jpg 1500w" sizes="(max-width: 480px) 400px, 
-                              (max-width: 768px) 700px, 
-                              (max-width: 1024px) 1000px, 
-                              1500px" alt="Squirrel Eat Nuts">
+                  <picture>
+                    <source media="(min-width:1081px)" srcset="./large_Squirrel_Eat.jpg">
+                    <source media="(min-width:651px) and (max-width:1080px)" srcset="./medium_default_Squirrel_Eat.jpg">
+                    <source media="(max-width:650px)" srcset="./small_Squirrel_Eat.jpg">
+                    <img src="./medium_default_Squirrel_Eat.jpg" alt="Testing" style="width:100%;">
+                  </picture>
 
                   <div class="elementInner">
                     <h5>Wildlife</h5>
@@ -318,7 +298,13 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
-                  <img src="./Squirrel_Crawl.jpg" alt="Wildlife">
+                  <picture>
+                    <source media="(min-width:1081px)" srcset="./large_Squirrel_Crawl.jpg">
+                    <source media="(min-width:651px) and (max-width:1080px)"
+                      srcset="./medium_default_Squirrel_Crawl.jpg">
+                    <source media="(max-width:650px)" srcset="./small_Squirrel_Crawl.jpg">
+                    <img src="./medium_default_Squirrel_Crawl.jpg" alt="Testing" style="width:100%;">
+                  </picture>
                   <div class="elementInner">
                     <h5>Wildlife</h5>
                     <h3><strong>Grove Rocky View, Monterey, CA</strong> </h3>
@@ -356,8 +342,14 @@
           <div class="Grid Grid--gutters Grid--cols-2">
             <div class="Grid-cell">
               <div class="element">
-                <div class=" ShadowBox">
-                  <img src="./Butterfly01.jpg" alt="Wildlife">
+                <div class="ShadowBox">
+                  <picture>
+                    <source media="(min-width:1081px)" srcset="./large_butterfly_lands_on_a_branch.jpg">
+                    <source media="(min-width:651px) and (max-width:1080px)"
+                      srcset="./medium_default_butterfly_lands_on_a_branch.jpg">
+                    <source media="(max-width:650px)" srcset="./small_butterfly_lands_on_a_branch.jpg">
+                    <img src="./medium_default_butterfly_lands_on_a_branch.jpg" alt="Testing" style="width:100%;">
+                  </picture>
                   <div class="elementInner">
                     <h5>Wildlife</h5>
                     <h3><strong>Monarch Butterfly Sanctuary</strong> </h3>
@@ -412,7 +404,13 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
-                  <img src="./15.jpg" alt="Nature">
+                  <picture>
+                    <source media="(min-width:1081px)" srcset="./large_wood_reflection.jpg">
+                    <source media="(min-width:651px) and (max-width:1080px)"
+                      srcset="./medium_default_wood_reflection.jpg">
+                    <source media="(max-width:650px)" srcset="./small_wood_reflection.jpg">
+                    <img src="./medium_default_wood_reflection.jpg" alt="Nature" style="width:100%;">
+                  </picture>
                   <div class="elementInner">
                     <h5>Nature</h5>
 
@@ -433,7 +431,12 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
-                  <img src="./20.jpg" alt="Wildlife">
+                  <picture>
+                    <source media="(min-width:1081px)" srcset="./large_mule_deer.jpg">
+                    <source media="(min-width:651px) and (max-width:1080px)" srcset="./medium_default_mule_deer.jpg">
+                    <source media="(max-width:650px)" srcset="./small_mule_deer.jpg">
+                    <img src="./medium_default_mule_deer.jpg" alt="Wildlife" style="width:100%;">
+                  </picture>
                   <div class="elementInner">
                     <h5>Wildlife</h5>
                     <h3><strong>Yellowstone National Park</strong> </h3>
@@ -454,7 +457,13 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
-                  <img src="./19.jpg" alt="Nature">
+                  <picture>
+                    <source media="(min-width:1081px)" srcset="./large_hotSpring_yellowstone_tree.jpg">
+                    <source media="(min-width:651px) and (max-width:1080px)"
+                      srcset="./medium_default_hotSpring_yellowstone_tree.jpg">
+                    <source media="(max-width:650px)" srcset="./small_hotSpring_yellowstone_tree.jpg">
+                    <img src="./medium_default_hotSpring_yellowstone_tree.jpg" alt="Nature" style="width:100%;">
+                  </picture>
                   <div class="elementInner">
                     <h5>Nature</h5>
                     <h3><strong>Yellowstone National Park</strong> </h3>
